[package]
name = "lachesis-rs"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <agustin@auvik.com>"]

[dependencies]
bincode = "1.0.1"
failure = "0.1.3"
proptest = "0.8.7"
rand = "0.6.0"
ring = "0.13.4"
serde = "1.0.80"
serde_derive = "1.0.80"
untrusted = "0.6.2"
fal = { path = "../fal" }
futures = "0.1.16"
grpcio = "0.4.0"
protobuf = "2.0.2"

#[[bin]]
#name = "full_node"
#path = "src/bin/full_node"

[build-dependencies]
protoc-grpcio = "0.3.1"